--- a/Index.HTML
+++ b/Index.HTML
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carol Shaw - Primeira mulher a desenvolver um jogo eletrônico!</title>
-    <link rel="stylesheet" href="STYLE/style.css">
-    <script src="JS/script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <link rel="shortcut icon" href="IMAGE/favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
