--- a/Index.HTML
+++ b/Index.HTML
@@ -15,10 +15,10 @@
     </header>
 
     <nav id="navegador">
-        <a href="#" class="linkNav">Origem</a>
-        <a href="#" class="linkNav">Carreira</a>
-        <a href="#" class="linkNav">Aposentadoria</a>
-        <a href="#" class="linkNav">Emulador</a>
+        <a href="#" rel="Next" class="linkNav">Origem</a>
+        <a href="#" rel="Next"  class="linkNav">Carreira</a>
+        <a href="#" rel="Next"  class="linkNav">Aposentadoria</a>
+        <a href="#" rel="Next"  class="linkNav">Emulador</a>
     </nav>
 
     <main>
@@ -31,7 +31,7 @@
                 <h2>Origem</h2>
                 <p>Nascida em 1955 e se formou em Engenharia elétrica e logo depois virou mestre em ciência da computação. Jogadora desde sua adolescência, adorava fliperamas como “Computer Space”.</p>
                 <div>
-                    <img src="/IMAGE/image main/Carol Shaw Vertical.png">
+                    <img src="/IMAGE/image main/Carol Shaw Vertical.png" alt="Carol Shaw">
                 </div>
             </article>
 
@@ -40,7 +40,7 @@
                     <h3>Você sabia?</h3>
                     <p class="parafragoAside"><strong>Computer Space</strong> é um videogame arcade de combate espacial lançado em 1971. Criado por <a href="https://pt.wikipedia.org/wiki/Nolan_Bushnell" target="_blank" class="externo linkExterno">Nolan Bushnell</a> e <a href="https://pt.wikipedia.org/wiki/Ted_Dabney" target="_blank" class="externo linkExterno">Ted Dabney</a> (fundadores da Empresa Atari, Inc), foi o primeiro videogame arcade e também o primeiro videogame disponível comercialmente.</p>
                     <div>
-                        <img src="IMAGE/image main/jogo Computer Space.png">
+                        <img src="IMAGE/image main/jogo Computer Space.png" alt="Exemplo do jogo Computer Space">
                     </div>
                 </aside>
             </div>
@@ -54,11 +54,11 @@
                 </ul>
                 <div id="conteiner">
                     <div class="jogosShaw">
-                        <img src="IMAGE/image main/jogo Polo.png" class="imgJogos">
+                        <img src="IMAGE/image main/jogo Polo.png" alt="Jogo Polo" class="imgJogos">
                     </div>
 
                     <div class="jogosShaw">
-                        <img src="IMAGE/image main/jogo 3D Tic Tac Toe.png" class="imgJogos">
+                        <img src="IMAGE/image main/jogo 3D Tic Tac Toe.png" alt="Jogo 3D Tic Tac Toe" class="imgJogos">
                     </div>
                 </div>
                 <p>Saindo da companhia que se tornou o símbolo da revolução dos videogames no mundo, <strong>Shaw</strong> foi trabalhar na <strong><abbr title="Activision Publishing, Inc">Activision</abbr></strong>, que, na época, fabricava cartuchos para o Atari 2600. Lá, a desenvolvedora programou seu game de maior sucesso, <strong>River Raid</strong>, considerado um clássico e um dos jogos mais populares de sua época.</p>
@@ -86,49 +86,27 @@
                     <button class="setaDireita control" aria-label="Next image">▶</button>
                     <div class="carrousel">
                         <div class="galeria">
-                            <img src="IMAGE/carousel/carolShawAtualmente.png" class="item currentItem">
-                            <img src="IMAGE/carousel/carolShawMarido.png" class="item">
-                            <img src="IMAGE/carousel/carolShawEstudando.png" class="item">
-                            <img src="IMAGE/carousel/carolShawPremio.png" class="item">
-                            <img src="IMAGE/carousel/carolShawPremios.png" class="item">
-                            <img src="IMAGE/carousel/carolShawTrabalhando.png" class="item">
+                            <img src="IMAGE/carousel/carolShawAtualmente.png" alt="Carol Shaw atualmente" class="item currentItem">
+                            <img src="IMAGE/carousel/carolShawMarido.png" alt="Carol Shaw e seu marido" class="item">
+                            <img src="IMAGE/carousel/carolShawEstudando.png" alt="Carol Shaw estudando" class="item">
+                            <img src="IMAGE/carousel/carolShawPremio.png" alt="Carol Shaw com seu prêmio de jogo mais vendido da época" class="item">
+                            <img src="IMAGE/carousel/carolShawPremios.png" alt="Carol Shaw com seu prêmios" class="item">
+                            <img src="IMAGE/carousel/carolShawTrabalhando.png" alt="Carol Shaw trabalhando" class="item">
                         </div>
                     </div>
                 </div>
 
                 <p>Seu legado, no entanto, não foi esquecido. <strong>Carol Shaw</strong> foi a primeira mulher a desenvolver um game, mas não a única: sua história serviu de inspiração para outras mulheres na indústria dos videogames.</p>
             </article>
-        </section>
-
-        <section>
-            <h2 class="linkExterno">Emulador River Raid - Atari 2600</h2>
-            <div>
-                <iframe src="https://atarionline.org/atari-2600/river-raid" width="600px" height="700px" scrolling="no" align="center" class="emulador"></iframe>     
-            </div>
-
-            <div class="instrucoes">
-                <h3>Como jogar?</h3>
-
-                <div class="conteinerInstrucoes">
-                    <div class="conteinerInstrucoesImg">
-                        <p class="conteinerInsutrucoesParagrafo">Movimentação<img src="IMAGE/como jogar/teclasMovimentacao.png" class="comoJogar comoJogarMaior"></p>
-                    </div>
-
-                    <div class="conteinerInstrucoesImg">
-                        <p class="conteinerInsutrucoesParagrafo">Atirar<img src="IMAGE/como jogar/spaceBar.png" class="comoJogar comoJogarMaior"></p>
-                    </div>
-
-                    <div class="conteinerInstrucoesImg">
-                        <p class="conteinerInsutrucoesParagrafo">Reset<img src="IMAGE/como jogar/f12.png" class="comoJogar"></p>
-                    </div>
-                </div>
-
-            </div>
-        </section>
+            <article>
+                <h3>Ficou interessada em jogar?</h3>
+                <p class="articleParagrafo">Existem muitos sites que emulam o jogo River Raid do Atari. <br>Se ficou com dúvida de como era este clássico dos anos 80, <a href="https://www.retrogames.cz/play_036-Atari2600.php" target="_blank" class="linkExterno linkJogo">CLIQUE AQUI!</a> para jogar!</p>
+            </article>
+        </section>     
     </main>
 
-    <footer id="rodape">
-        <p class="paragrafoFooter">Site desenvolvido por <a href="https://www.linkedin.com/in/juliafclima/" target="_blank" class="linkRodape externo linkExterno">Julia Lima</a> para o <strong class="projetoFinal">Projeto Final</strong> da <a href="https://womakerscode.org/" target="_blank" class="linkRodape externo linkExterno">WomakersCode</a></p>
+    <footer>
+        <p class="rodapeParagrafo">Site desenvolvido por <a href="https://www.linkedin.com/in/juliafclima/" target="_blank" class="linkExterno linkFooter">Julia Lima</a> para <a href="https://womakerscode.org/" target="_blank" class="linkExterno linkFooter">WoMakersCode</a></p>
     </footer>
 </body>
 
