--- a/Index.HTML
+++ b/Index.HTML
@@ -15,10 +15,10 @@
     </header>
 
     <nav id="navegador">
-        <a href="#" rel="Next" class="linkNav">Origem</a>
-        <a href="#" rel="Next"  class="linkNav">Carreira</a>
-        <a href="#" rel="Next"  class="linkNav">Aposentadoria</a>
-        <a href="#" rel="Next"  class="linkNav">Emulador</a>
+        <a href="#ORIGEM" rel="Next" class="linkNav">Origem</a>
+        <a href="#CARREIRA" rel="Next"  class="linkNav">Carreira</a>
+        <a href="#APOSENTADORIA" rel="Next"  class="linkNav">Aposentadoria</a>
+        <a href="#EMULADOR" rel="Next"  class="linkNav">Emulador</a>
     </nav>
 
     <main>
@@ -28,7 +28,7 @@
 
         <section>
             <article>
-                <h2>Origem</h2>
+                <h2 id="ORIGEM">Origem</h2>
                 <p>Nascida em 1955 e se formou em Engenharia elétrica e logo depois virou mestre em ciência da computação. Jogadora desde sua adolescência, adorava fliperamas como “Computer Space”.</p>
                 <div>
                     <img src="/IMAGE/image main/Carol Shaw Vertical.png" alt="Carol Shaw">
@@ -46,7 +46,7 @@
             </div>
             
             <article>
-                <h2>Carreira na industria dos games</h2>
+                <h2 id="CARREIRA">Carreira na industria dos games</h2>
                 <p>Depois de passar rapidamente pela <strong>Tandem Computers</strong>, foi contratada como engenheira de softwares pela <strong><abbr title="Atari, Inc">Atari</abbr></strong> logo que se formou na universidade, foi lá que desenvolveu seus dois primeiros jogos, ambos para o Atari 2600.</p>
                 <ul>
                     <li>Polo</li>
@@ -77,7 +77,7 @@
             </article>
 
             <article>
-                <h2>Aposentadoria antecipada</h2>
+                <h2 id="APOSENTADORIA">Aposentadoria antecipada</h2>
                 <p><strong>Carol</strong> se aposentou em 1990, mas ao deixar os games de lado, se dedicou a trabalhos voluntários em organizações relacionadas com tecnologia.</p>
                 <p>Atualmente, com seus 68 anos de idade, vive uma vida tranquila na Califórnia com seu marido <strong>Ralph Merkle</strong>, um cientista e pesquisador na área de <abbr title="Ciência que se dedica ao estudo da manipulação da matéria numa escala atómica e molecular">nanotecnologia</abbr> com quem se casou em 1983.</p>
                 
@@ -99,7 +99,7 @@
                 <p>Seu legado, no entanto, não foi esquecido. <strong>Carol Shaw</strong> foi a primeira mulher a desenvolver um game, mas não a única: sua história serviu de inspiração para outras mulheres na indústria dos videogames.</p>
             </article>
             <article>
-                <h3>Ficou interessada em jogar?</h3>
+                <h3 id="EMULADOR">Ficou interessada em jogar?</h3>
                 <p class="articleParagrafo">Existem muitos sites que emulam o jogo River Raid do Atari. <br>Se ficou com dúvida de como era este clássico dos anos 80, <a href="https://www.retrogames.cz/play_036-Atari2600.php" target="_blank" class="linkExterno linkJogo">CLIQUE AQUI!</a> para jogar!</p>
             </article>
         </section>     
