subi para o pages

--- a/Index.HTML
+++ b/Index.HTML
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carol Shaw - Primeira mulher a desenvolver um jogo eletrônico!</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="STYLE/style.css">
+    <script src="JS/script.js" defer></script>
     <link rel="shortcut icon" href="IMAGE/favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -78,7 +78,7 @@
 
             <article>
                 <h2 id="APOSENTADORIA">Aposentadoria antecipada</h2>
-                <p><strong>Carol</strong> se aposentou em 1990, mas ao deixar os games de lado, se dedicou a trabalhos voluntários em organizações relacionadas com tecnologia.</p>
+                <p>Carol se aposentou em 1990, mas ao deixar os games de lado, se dedicou a trabalhos voluntários em organizações relacionadas com tecnologia.</p>
                 <p>Atualmente, com seus 68 anos de idade, vive uma vida tranquila na Califórnia com seu marido <strong>Ralph Merkle</strong>, um cientista e pesquisador na área de <abbr title="Ciência que se dedica ao estudo da manipulação da matéria numa escala atómica e molecular">nanotecnologia</abbr> com quem se casou em 1983.</p>
                 
                 <div class="conteiner">
@@ -96,7 +96,7 @@
                     </div>
                 </div>
 
-                <p>Seu legado, no entanto, não foi esquecido. <strong>Carol Shaw</strong> foi a primeira mulher a desenvolver um game, mas não a única: sua história serviu de inspiração para outras mulheres na indústria dos videogames.</p>
+                <p>Seu legado, no entanto, não foi esquecido. Carol Shaw foi a primeira mulher a desenvolver um game, mas não a única: <strong>sua história serviu de inspiração para outras mulheres na indústria dos videogames.</strong></p>
             </article>
             <article>
                 <h3 id="EMULADOR">Ficou interessada em jogar?</h3>
