--- a/Index.HTML
+++ b/Index.HTML
@@ -29,9 +29,9 @@
         <section>
             <article>
                 <h2 id="ORIGEM">Origem</h2>
-                <p>Nascida em 1955 e se formou em Engenharia elétrica e logo depois virou mestre em ciência da computação. Jogadora desde sua adolescência, adorava fliperamas como “Computer Space”.</p>
+                <p>Nascida em 1955, se formou em Engenharia elétrica e logo depois virou mestre em ciência da computação. Jogadora desde sua adolescência, adorava fliperamas como “Computer Space”.</p>
                 <div>
-                    <img src="/IMAGE/image main/Carol Shaw Vertical.png" alt="Carol Shaw">
+                    <img src="IMAGE/image main/Carol Shaw Vertical.png" alt="Carol Shaw">
                 </div>
             </article>
 
