--- a/Index.HTML
+++ b/Index.HTML
@@ -14,9 +14,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
-<body class="papelParede">
+<body>
     <header>
-        <h1>Carol Shaw</h1>
+        <h1 class="textoDestaque">Carol Shaw</h1>
         <p class="paragrafoCenter">Primeira mulher a desenvolver um jogo eletrônico</p>
     </header>
 
@@ -99,13 +99,13 @@
                 <p>Seu legado, no entanto, não foi esquecido. Carol Shaw foi a primeira mulher a desenvolver um game, mas não a única: <strong>sua história serviu de inspiração para outras mulheres na indústria dos videogames.</strong></p>
                 
                 <h3 class="h3Jogo">Ficou interessada em jogar?</h3>
-                <p>Existem muitos sites que emulam o jogo River Raid do Atari. Se ficou com dúvida de como era este clássico dos anos 80, <a href="https://www.retrogames.cz/play_036-Atari2600.php" target="_blank" class="linkExterno">CLIQUE AQUI!</a> para jogar!</p>
+                <p>Hoje em dia, alguns sites emulam este clássico dos anos 80, <a href="https://www.retrogames.cz/play_036-Atari2600.php" target="_blank" class="linkExterno">RetroGames</a> é um exemplo de site.</p>
             </article>
         </section>     
     </main>
 
     <footer>
-        <span>Desenvolvido por Julia Lima para o projeto<a href="https://womakerscode.org/" target="_blank" class="linkExterno linkJogo"> WoMakersCode - 2023</a></span>
+        <span><p class="paragrafoCenter parafragoFooter">Desenvolvido por Julia Lima para o projeto<a href="https://womakerscode.org/" target="_blank" class="linkExterno linkJogo"> WoMakersCode - 2023</a><a href="https://www.linkedin.com/in/juliafclima/"><img src="IMAGE/redessociais/linkedin.png" alt="Meu Linkedin" class="divulgacao"></a><a href="https://github.com/juliafclima"><img src="IMAGE/redessociais/github-logo.png" alt="Meu GitHub" class="divulgacao"></a></p></span>
     </footer>
 </body>
 
