--- a/Index.HTML
+++ b/Index.HTML
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carol Shaw - Primeira mulher a desenvolver um jogo eletrônico!</title>
+    <meta name="description" content="Página desenvolvida como projeto final do programa de imersão Programação Web para Iniciantes, promovido pela WoMakers Code">
+    <meta name="author" content="Júlia Lima Fernandes Carneiro">
+    <meta name="keywords" content="html, css, javascript, programming, female programming, development">    
     <link rel="stylesheet" href="STYLE/style.css">
     <script src="JS/script.js" defer></script>
     <link rel="shortcut icon" href="IMAGE/favicon/favicon.ico" type="image/x-icon">
@@ -21,10 +24,10 @@
     </header>
 
     <nav>
-        <a href="#ORIGEM" rel="Next" class="linkNav">Origem</a>
-        <a href="#CARREIRA" rel="Next"  class="linkNav">Carreira</a>
-        <a href="#APOSENTADORIA" rel="Next"  class="linkNav">Aposentadoria</a>
-        <a href="#FOTOS" rel="Next"  class="linkNav">Fotos</a>
+        <a href="#ORIGEM" title="Origem da Carol Shaw" rel="Next" class="linkNav">Origem</a>
+        <a href="#CARREIRA" title="Carreira da Carol Shaw" rel="Next"  class="linkNav">Carreira</a>
+        <a href="#APOSENTADORIA" title="Aposentadoria da Carol Shaw" rel="Next"  class="linkNav">Aposentadoria</a>
+        <a href="#FOTOS" title="Fotos da Carol Shaw" rel="Next"  class="linkNav">Fotos</a>
     </nav>
 
     <main id="ORIGEM">
@@ -42,7 +45,7 @@
                 <div class="aside">
                     <aside>
                         <h3 class="h3Aside">Você sabia?</h3>
-                        <p><strong>Computer Space</strong> é um videogame arcade de combate espacial lançado em 1971. Criado por <a href="https://pt.wikipedia.org/wiki/Nolan_Bushnell" target="_blank" class="linkExterno">Nolan Bushnell</a> e <a href="https://pt.wikipedia.org/wiki/Ted_Dabney" target="_blank" class="linkExterno">Ted Dabney</a> (fundadores da Empresa Atari, Inc), foi o primeiro videogame arcade e também o primeiro videogame disponível comercialmente.</p>
+                        <p><strong>Computer Space</strong> é um videogame arcade de combate espacial lançado em 1971. Criado por <a href="https://pt.wikipedia.org/wiki/Nolan_Bushnell" title="Wikipedia do Nolan Bushnell" target="_blank" class="linkExterno">Nolan Bushnell</a> e <a href="https://pt.wikipedia.org/wiki/Ted_Dabney" title="Wikipedia do Ted Dabney" target="_blank" class="linkExterno">Ted Dabney</a> (fundadores da Empresa Atari, Inc), foi o primeiro videogame arcade e também o primeiro videogame disponível comercialmente.</p>
                         <div>
                             <img src="IMAGE/imagemain/jogoComputerSpace.png" alt="Exemplo do jogo Computer Space">
                         </div>
@@ -68,8 +71,8 @@
             <article>
                 <h2>O jogo que mudou a sua vida</h2>
                 <p>O game introduziu mecânicas nunca antes vista, como a movimentação do avião para os lados, para frente e para trás, além de introduzir a limitação do combustível, já que sem ele você também morria. Alem de possuir velocidades diferentes e colisão com diferentes objetos. E por isso é considerado o pai do <abbr title="Locais onde o personagem do jogador reaparece após a morte"><strong>Checkpoint</strong></abbr>, pois era necessário que a aeronave controlada pelo jogador abastecesse para continuar seu trajeto.</p>
-                <p>Foi eleito como <strong>o jogo mais desafiador</strong> pela revista <a href="https://www.infoworld.com/" target="_blank" class="linkExterno">InfoWorld</a>. No ano seguinte, em 1984, foi considerado como <strong>"O jogo mais jogável e divertido do mundo"</strong> pela revista <a href="https://www.deseret.com/" target="_blank" class="linkExterno">The Desert News</a>, e ganhou o prêmio de <strong>"melhor game de ação do ano"</strong> e um certificado de mérito na categoria <strong>“1984 Best Computer Action Game”</strong> durante o 5º Arkie Awards.</p>
-                <p>Em 2017, recebeu o prêmio de <strong>Ícone da Industria</strong>, dado pela <a href="https://thegameawards.com/" target="_blank" class="linkExterno">The Game Awards</a>, graças ao seu imenso trabalho e legado deixado no desenvolvimento de jogos.</p>
+                <p>Foi eleito como <strong>o jogo mais desafiador</strong> pela revista <a href="https://www.infoworld.com/" title="Revista InfoWord" target="_blank" class="linkExterno">InfoWorld</a>. No ano seguinte, em 1984, foi considerado como <strong>"O jogo mais jogável e divertido do mundo"</strong> pela revista <a href="https://www.deseret.com/" title="Revista The Desert" target="_blank" class="linkExterno">The Desert News</a>, e ganhou o prêmio de <strong>"melhor game de ação do ano"</strong> e um certificado de mérito na categoria <strong>“1984 Best Computer Action Game”</strong> durante o 5º Arkie Awards.</p>
+                <p>Em 2017, recebeu o prêmio de <strong>Ícone da Industria</strong>, dado pela <a href="https://thegameawards.com/" title="Premiação The Game Awards" target="_blank" class="linkExterno">The Game Awards</a>, graças ao seu imenso trabalho e legado deixado no desenvolvimento de jogos.</p>
                 
                 <div class="video">
                     <iframe width="607" height="399" src="https://www.youtube.com/embed/gombHp5wMrk" title="Atari 2600 Longplay [029] River Raid" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -99,14 +102,33 @@
                 <p>Seu legado, no entanto, não foi esquecido. Carol Shaw foi a primeira mulher a desenvolver um game, mas não a única: <strong>sua história serviu de inspiração para outras mulheres na indústria dos videogames.</strong></p>
                 
                 <h3 class="h3Jogo">Ficou interessada em jogar?</h3>
-                <p>Hoje em dia, alguns sites emulam este clássico dos anos 80, <a href="https://www.retrogames.cz/play_036-Atari2600.php" target="_blank" class="linkExterno">RetroGames</a> é um exemplo de site.</p>
+                <p>Hoje em dia, alguns sites emulam este clássico dos anos 80, <a href="https://www.retrogames.cz/play_036-Atari2600.php" title="Emulador do jogo River Raid" target="_blank" class="linkExterno">RetroGames</a> é um exemplo de site.</p>
             </article>
         </section>     
     </main>
 
-    <footer>
+    <!-- <footer>
         <span><p class="paragrafoCenter parafragoFooter">Desenvolvido por Julia Lima para o projeto<a href="https://womakerscode.org/" target="_blank" class="linkExterno linkJogo"> WoMakersCode - 2023</a><a href="https://www.linkedin.com/in/juliafclima/"><img src="IMAGE/redessociais/linkedin.png" alt="Meu Linkedin" class="divulgacao"></a><a href="https://github.com/juliafclima"><img src="IMAGE/redessociais/github-logo.png" alt="Meu GitHub" class="divulgacao"></a></p></span>
+    </footer> -->
+
+    <footer>
+        <div>
+            <div class="textofooter">
+                <span class="textoFooter">Desenvolvido por <strong class="strongFooter">Júlia Lima</strong> para o projeto <a class="linkExterno strongFooter">WomakersCode - 2023</a></span>
+            </div>
+
+            <div class="divFooter">
+                <a href="https://github.com/juliafclima" title="GitHub" target="_blank" class="linkFooter">
+                    <img src="IMAGE/redessociais/github-logo.png" alt="GitHub" class="linkFooter">
+                </a>
+            </div>
+
+            <div class="divFooter">
+                <a href="https://www.linkedin.com/in/juliafclima/" title="LinkedIn" class="linkFooter">
+                    <img src="IMAGE/redessociais/linkedin.png" alt="LinkedIn" class="linkFooter">
+                </a>
+            </div>
+        </div>
     </footer>
 </body>
-
 </html>
