--- a/Index.HTML
+++ b/Index.HTML
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carol Shaw - Primeira mulher a desenvolver um jogo eletrônico!</title>
     <meta name="description" content="Página desenvolvida como projeto final do programa de imersão Programação Web para Iniciantes, promovido pela WoMakers Code">
     <meta name="author" content="Júlia Lima Fernandes Carneiro">
     <meta name="keywords" content="html, css, javascript, programming, female programming, development, games, gamer, gamergirl, gamergirls, girlswhocode, mulheresnatecnologia, code, videogames, carolshaw, computerscience, jogosdecomputador, jogos, gamestagram, atariges, atarist, atari2600">    
-    <link rel="shortcut icon" href="IMAGE/favicon/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="IMG/favicon/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -16,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/stylenav.css">
+    <title>Carol Shaw - Primeira mulher a desenvolver um jogo eletrônico!</title>
     <script src="JS/script.js" defer></script>
     <script src="JS/scriptnav.js" defer></script>
 </head>
@@ -54,36 +54,6 @@
                 </li>
             </ul>
     </nav>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <main>
         <h1 class="fontePreta">Grandes Mulheres da Tecnólogia</h1>
@@ -171,23 +141,21 @@
     </main>
 
     <footer>
-        <div>
-            <div class="textofooter">
-                <span class="textoFooter">Desenvolvido por <strong class="strongFooter">Júlia Lima</strong> para o projeto <a class="linkExterno strongFooter">WomakersCode - 2023</a></span>
-            </div>
+       
+            <p class="paragrafoCenter">Site desenvolvido por <strong class="strongFooter">Julia Lima</strong></p>
 
-            <div class="divFooter">
-                <a href="https://github.com/juliafclima" title="GitHub" target="_blank" class="linkFooter">
-                    <img src="IMG/redessociais/github-logo.png" alt="GitHub" class="linkFooter">
-                </a>
-            </div>
-
-            <div class="divFooter">
-                <a href="https://www.linkedin.com/in/juliafclima/" title="LinkedIn" class="linkFooter">
-                    <img src="IMG/redessociais/linkedin.png" alt="LinkedIn" class="linkFooter">
-                </a>
-            </div>
+        <div class="divFooter">
+            <a href="https://github.com/juliafclima" title="GitHub" target="_blank" class="linkFooter">
+                <img src="IMG/redessociais/github-logo.png" alt="GitHub" class="linkFooter">
+            </a>
         </div>
+
+        <div class="divFooter">
+            <a href="https://www.linkedin.com/in/juliafclima/" title="LinkedIn" class="linkFooter">
+                <img src="IMG/redessociais/linkedin.png" alt="LinkedIn" class="linkFooter">
+            </a>
+        </div>
+        
     </footer>
 </body>
 </html>
