--- a/Index.HTML
+++ b/Index.HTML
@@ -95,7 +95,7 @@
             <article id="ATARI">
                 <h2>Empresa Atari, Inc</h2>
                 <p>Em entrevista a revista Vintage Computing, Shaw conta os preconceitos que sofreu por ser mulher ao trabalhar com games, ainda mais que ela não havia produzido jogos antes.</p>
-                <p><i>“Uma vez, quando eu estava trabalhando no laboratório, <a href="https://pt.wikipedia.org/wiki/Ray_Kassar" title="WikiPedia Ray Kassar" target="_blank">Ray Kassar</a>, o presidente da Atari, estava fazendo um tour pelo local e falou: ‘Nós temos uma mulher desenvolvedora de jogos. Ela pode fazer a combinação de cores e a decoração interior dos cartuchos’. E estes eram dois tópicos que eu não tinha interesse.”</i>, lembra Shaw.</p>
+                <p><i>“Uma vez, quando eu estava trabalhando no laboratório, <a href="https://pt.wikipedia.org/wiki/Ray_Kassar" class="linkExterno" title="WikiPedia Ray Kassar" target="_blank">Ray Kassar</a>, o presidente da Atari, estava fazendo um tour pelo local e falou: ‘Nós temos uma mulher desenvolvedora de jogos. Ela pode fazer a combinação de cores e a decoração interior dos cartuchos’. E estes eram dois tópicos que eu não tinha interesse.”</i>, lembra Shaw.</p>
                 <p>Na Atari, ela fez programação e design, em cinco jogos.</p>
                 <img src="IMG/imagemain/videogame Atari-2600.png" alt="Video-game Atari">
             </article>
